Bug #41965  ndb_mgmd does not disconnect client after failed "transporter connect"