storage/ndb/src/mgmsrv/MgmtSrvr.hpp
@@ -444,7 +444,7 @@ public:
 
   int connect_to_self(const char* bindaddress = 0);
 
-  void transporter_connect(NDB_SOCKET_TYPE sockfd);
+  bool transporter_connect(NDB_SOCKET_TYPE sockfd);
 
   ConfigRetriever *get_config_retriever() { return m_config_retriever; };
 
